# test-tesi

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  main.py  pyproject.toml
backend/config/: config_loader.py  mock_data.yaml
backend/models/: __init__.py  predictor.py
frontend/: .gitignore  Dockerfile  index.html  package.json
frontend/src/: App.jsx
services/bert-sentiment/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/bert-toxicity/: Dockerfile  main.py
services/e5-embeddings/: Dockerfile  main.py  pyproject.toml  requirements.txt
services/toxicity-detection/: Dockerfile  main.py
